Moved admin route to same path depth as app, so far the layout is close, still a couple issues. When traversing to the second level of account, the app bar/page title appears to flicker as the slideLeft2 animation is completing. Still would like to figure out how to embed a CSSTransiion within a CSSTransition in a child route. The CSSTransition HOC as a lower path depth recieves location props when the pathname changes causeing a higher level CSSTransition to be rerendered causeing issues with the sideBar to disappear on the next route change.

--- a/src/assets/css/material-dashboard-react.css
+++ b/src/assets/css/material-dashboard-react.css
@@ -76,6 +76,10 @@
   height: 100vh;
   top: 56px;
   z-index: 3 !important;
+  background-color: #323232;
+  -webkit-box-shadow: 0px 3px 0px 3px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 3px 0px 3px rgba(0,0,0,0.75);
+  box-shadow: 0px 3px 0px 3px rgba(0,0,0,0.75);
 }
 .slide3 {
   position: absolute;
@@ -83,9 +87,20 @@
   width: 100%;
   height: 100vh;
   top: 56px;
-  z-index: 3 !important;
+  z-index: 5 !important;
+  background-color: #323232;
+  -webkit-box-shadow: 0px 3px 0px 3px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 3px 0px 3px rgba(0,0,0,0.75);
+  box-shadow: 0px 3px 0px 3px rgba(0,0,0,0.75);
 }
 
+.slideLeft0-exit{
+  opacity: 1
+}
+.slideLeft0-exit.slideLeft0-exit-active{
+  opacity: 0;
+  transition: opacity 200ms ease-in;
+}
 .slideLeft1-enter {
   z-index: 2 !important;
   transform: translate3d(100%, 0, 0);
@@ -94,6 +109,13 @@
   z-index: 2 !important;
   transition: transform 200ms;
   transform: translate3d(0, 0, 0);
+}
+.slideLeft1-exit{
+  opacity: 1
+}
+.slideLeft1-exit.slideLeft1-exit-active{
+  /* opacity: 0;
+  transition: opacity 200ms ease-in; */
 }
 
 .slideRight1-exit {
@@ -118,7 +140,14 @@
 .slideLeft2-enter-done {
   z-index: 4 !important;
 }
-
+.slideLeft2-exit{
+  z-index: 3 !important;
+  opacity: 1;
+}
+.slideLeft2-exit.slideLeft2-exit-active{
+  /* opacity: 0;
+  transition: opacity 200ms ease-in; */
+}
 .slideRight2-exit {
   z-index: 4 !important;
   transform: translate3d(0, 0, 0);
@@ -180,6 +209,7 @@ body {
     font-weight: 10000;
     line-height: 1.5em;
     overflow-x: hidden;
+    padding-right: 0px !important;
 }
 
 blockquote footer:before, blockquote small:before {
@@ -219,7 +249,7 @@ h5 {
 h6 {
     font-size: 1em;
     text-transform: uppercase;
-    font-weight: 500;
+    font-weight: 200;
 }
 
 body {
@@ -313,7 +343,7 @@ footer ul li {
 footer ul li a {
     color: inherit;
     padding: 15px;
-    font-weight: 500;
+    font-weight: 200;
     font-size: 12px;
     text-transform: uppercase;
     border-radius: 3px;
